Random Value Written - Woo.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <!-- Game Header -->
+    <!-- Instructions -->
 
     <div class="InstructionBlock">
 
@@ -35,17 +35,18 @@
         </div>
     </div>
     <br>
+    <!-- Game Points Tracker -->
     <div class="col-sm-6">
         <div class="target" id="target"> Target:
-            </p>
-        </div>
+         </div>
     </div>
     <div class="col-lg-6">
         <div class="crystalpointsbox" id=crystalcount> Counter:</div>
         <div>
         </div>
         <br>
-               <div class="col-md-6">
+        <!-- Win / Loss Tracker -->
+        <div class="col-md-6">
             <p id="wins"> Wins:</p>
         </div>
         <div class="col-md-6">
@@ -54,6 +55,7 @@
     </div>
     <br>
     <hr>
+    <!-- Crystal Field -->
     <div id="crystalfield">
         <img src="assets/images/crystal1.jpg" id="crystal1">
         <img src="assets/images/crystal2.jpg" id="crystal2">
@@ -61,10 +63,11 @@
         <img src="assets/images/crystal4.png" id="crystal4">
     </div>
 
-    
+
 
 </body>
-<!-- JQuery -->
+
+<!-- JQuery CDN -->
 <script src="https://code.jquery.com/jquery.js"></script>
 
 </html>
