Click logic working - Values add up

--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
     <br>
     <!-- Game Points Tracker -->
     <div class="col-sm-6">
-        <div class="target" id="target"> Target:
+            <div class="crystalpointsbox" id=crystalpointssum> Crystal Points:</div>
+            <div>
+            </div> 
+            <br> 
+    <div class="col-sm-6">
+        <div class="target" id="target">    Target:   
          </div>
     </div>
-    <div class="col-lg-6">
-        <div class="crystalpointsbox" id=crystalcount> Counter:</div>
-        <div>
-        </div>
+    
         <br>
         <!-- Win / Loss Tracker -->
         <div class="col-md-6">
